fixed spacing with headshot removal.

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -57,7 +57,7 @@ a {
         width: 22%;
         margin-bottom: -9vw;
     }
-    //display: none;
+    display: none;
 }
 
 .sidebar {
